==> dong-higenis/HG_BOT/STM32G4-WT-CAN/firmware/STM32G4-WT-CAN/App/bsp/bsp.c <==
#include "bsp.h"
#include "hw_def.h"


extern TIM_HandleTypeDef htim7;

bool bspInit(void)
{
  HAL_TIM_Base_Start(&htim7);
  return true;
}

void delay(uint32_t ms)
{
#ifdef _USE_HW_RTOS
  if (xTaskGetSchedulerState() != taskSCHEDULER_NOT_STARTED)
  {
    osDelay(ms);
  }
  else
  {
    HAL_Delay(ms);
  }
#else
  HAL_Delay(ms);
#endif
}

void delayUs(uint16_t us)
{
	__HAL_TIM_SET_COUNTER(&htim7,0);
	while (__HAL_TIM_GET_COUNTER(&htim7) < us);
}

uint32_t millis(void)
{
  return HAL_GetTick();
}

uint32_t micros(void)
{
  uint32_t       m0  = millis();
  __IO uint32_t  u0  = SysTick->VAL;
  uint32_t       m1  = millis();
  __IO uint32_t  u1  = SysTick->VAL;
  const uint32_t tms = SysTick->LOAD + 1;

  if (m1 != m0)
  {
    return (m1 * 1000 + ((tms - u1) * 1000) / tms);
  }
  else
  {
    return (m0 * 1000 + ((tms - u0) * 1000) / tms);
  }
}
